--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,11 @@
-@import "~bootstrap/dist/css/bootstrap.min.css";
+.container {
+  position: relative;
+  width: 100%;
+  text-align: center;
+}
+
+p {
+  width: 100%;
+  position: relative;
+  font-size: 30px;
+}
